# dhi

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
extension/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/src/agent/: view.ts
extension/src/chat/: panel.ts
extension/src/client/: index.test.ts  index.ts
extension/src/completion/: provider.test.ts  provider.ts
extension/test/: vscode-stub.cjs
models/: registry.yaml
platform/: __init__.py  auth.py  metering.py  queue.py
scripts/: bootstrap.sh  download-models.sh
server/: .dockerignore  Dockerfile  chat.py  main.py  requirements-dev.txt  requirements.txt
server/agents/: graph.py
server/inference/: fim.py
server/rag/: chunker.py  indexer.py  store.py
server/sandbox/: runner.py
server/tests/: conftest.py  test_api.py  test_chat.py
server/tests/inference/: test_fim.py
server/tests/rag/: test_chunker.py  test_indexer.py  test_store.py
