[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dhi-server"
version = "0.1.0"
requires-python = ">=3.11"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["server"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Enforce architecture layer boundaries (see ARCHITECTURE.md):
# Only rag/store.py may import chromadb — no other module.
"chromadb" = { msg = "Import chromadb only in rag/store.py (Architecture rule #1)" }

[tool.ruff.lint.per-file-ignores]
# rag/store.py is the ONE allowed importer of chromadb (Architecture rule #1).
# The lazy import inside __init__ avoids the NumPy 2.0 crash at test-collection
# time, so TID251 is suppressed here and only here.
"server/rag/store.py" = ["TID251"]

[tool.ruff.lint.isort]
# Treat server-side packages as first-party so they sort into their own import
# group and test files with a blank line before `from rag.*` / `from inference.*`
# pass the I001 check.
known-first-party = ["inference", "rag", "main"]

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["server/tests/"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["server/tests"]
addopts = "-v -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: tests that require running Docker services (Chroma, Ollama)",
]
pythonpath = ["server"]
